// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proxy_proto;

service proxyService {
  rpc checkalive (CheckaliveCMD) returns (RequestResult) {};
  rpc encode_inner (cal_block_inner_cluster) returns (if_ok) {};

}
// The request message containing the user's name.
message CheckaliveCMD {
  string name = 1;
}
message if_ok{
  bool is_ok = 1;
}
// The response message containing the greetings
message RequestResult {
  bool message = 1;
}

message cal_block_inner_cluster{
  repeated string from_keys = 1;
  repeated string from_ips = 2;
  repeated int32 from_ports = 3;
  string dest_key = 4;
  string dest_ip = 5;
  int32 dest_port = 6;
  int32 block_size = 7;
}
